dns/dnscrypt-proxy: Addressing issue #2
Added first-time setup process to use basic default settings
Added first-time setup BooleanField to settings model
Added hidden checkbox for first-time setup
Added dialog boxes for first-time setup, and loading settings
Fixed a couple of undefined calls in dnscrypt-proxy.toml.jinja
Moved mapDataToFormUI() call from partial to main volts instead
Added output for get-reoslvers.py
Removed 'enabled' if in dnscrypt-proxy.toml.jinja so dnscrypt-proxy
  can pull server names using default sources for first time setup
Adjusted indentations throughout dnscrypt-proxy.toml.jinja
Minor style adjustments here and there

--- a/dns/dnscrypt-proxy/src/opnsense/mvc/app/controllers/OPNsense/Dnscryptproxy/forms/settings.xml
+++ b/dns/dnscrypt-proxy/src/opnsense/mvc/app/controllers/OPNsense/Dnscryptproxy/forms/settings.xml
@@ -3,6 +3,11 @@
         <subtab id="basic_settings" description="Basic Settings">
             <model>settings</model>
             <field>
+                <id>settings.first_time_setup</id>
+                <hidden>true</hidden>
+                <type>checkbox</type>
+            </field>
+            <field>
                 <id>settings.enabled</id>
                 <label>Enable DNSCrypt-Proxy</label>
                 <help><![CDATA[This will enable the dnscrypt-proxy service.]]></help>
