dns/dnscrypt-proxy: Updating grid function to be dynamic
* Supporting multiple modes to allow dynamically defining
  the searches instead of hard coding them in the PHP.
* Mode specifies a special mode such as configd_cmd which
  will use the target as the configd_cmd instead of using
  it as a node target.

--- a/dns/dnscrypt-proxy/src/opnsense/mvc/app/controllers/OPNsense/Dnscryptproxy/forms/settings.xml
+++ b/dns/dnscrypt-proxy/src/opnsense/mvc/app/controllers/OPNsense/Dnscryptproxy/forms/settings.xml
@@ -2100,7 +2100,8 @@
     <tab id="resolvers" description="Resolvers">
         <subtab id="resolvers" description="Resolvers">
             <field>
-                <target>resolver_list</target>
+                <mode>configd_cmd</mode>
+                <target>get-resolvers</target>
                 <label>Resolver List</label>
                 <help><![CDATA[
                     This is a live list of all of the servers currently
@@ -2591,7 +2592,8 @@
             </dialog>
         </field>
         <field>
-            <target>relays</target>
+            <mode>configd_cmd</mode>
+            <target>get-relays</target>
             <label>Available Relays</label>
             <help><![CDATA[
                 This is a list of detected relays dynamically populated by
