dns/dnscrypt-proxy: Add odoh_server setting
* Update model/form/templates for odoh_server
* New setting since version 2.0.46-beta1

--- a/dns/dnscrypt-proxy-ng/src/opnsense/mvc/app/controllers/OPNsense/Dnscryptproxy/forms/settings.xml
+++ b/dns/dnscrypt-proxy-ng/src/opnsense/mvc/app/controllers/OPNsense/Dnscryptproxy/forms/settings.xml
@@ -97,8 +97,19 @@
                 <type>checkbox</type>
                 <help><![CDATA[
                     <b>doh_servers</b><br>
-                    Let DNSCrypt-Proxy use servers with DNS-over-HTTPS protocol
-                    enabled.
+                    Let DNSCrypt-Proxy use servers with DNS-over-HTTPS (DoH)
+                    protocol enabled.
+                    ]]>
+                </help>
+            </field>
+            <field>
+                <id>settings.odoh_servers</id>
+                <label>Use Oblivious DNS-over-HTTPS (DoH) Servers</label>
+                <type>checkbox</type>
+                <help><![CDATA[
+                    <b>odoh_servers</b><br>
+                    Let DNSCrypt-Proxy use servers with Oblivious
+                    DNS-over-HTTPS (DoH) protocol enabled.
                     ]]>
                 </help>
             </field>
