dns/dnscrypt-proxy: Remove static prefixes used for socks/http proxy
* Remove socks5:// prefix from jinja
* Remove http:// prefix from jinja
* Update hint/help text to reflect this.
* Keeps this setting consistent with how it is shown in documentation.

--- a/dns/dnscrypt-proxy-ng/src/opnsense/mvc/app/controllers/OPNsense/Dnscryptproxy/forms/settings.xml
+++ b/dns/dnscrypt-proxy-ng/src/opnsense/mvc/app/controllers/OPNsense/Dnscryptproxy/forms/settings.xml
@@ -331,11 +331,11 @@
                 <id>settings.proxy</id>
                 <label>Proxy</label>
                 <type>text</type>
-                <hint>127.0.0.1:9050</hint>
+                <hint>socks5://127.0.0.1:9050</hint>
                 <help><![CDATA[
                     <b>proxy</b><br>
                     Use this to route all TCP connections to a local Tor node,
-                    format has to be like 127.0.0.1:9050
+                    format has to be like: socks5://127.0.0.1:9050
                     ]]>
                 </help>
             </field>
@@ -346,7 +346,8 @@
                 <hint>http://127.0.0.1:8888</hint>
                 <help><![CDATA[
                     <b>http_proxy</b><br>
-                    Only for DoH servers
+                    HTTP/HTTPS proxy for DoH servers,
+                    format has to be like: http://127.0.0.1:8888
                     ]]>
                 </help>
             </field>
