dns/dnscrypt-proxy: Fix lb_estimator/lb_strategy in view/jinja
* lb_stategy needs to be surrouned by single quotes
* Change lb_estimator to a boolean value in jinja
* Change field type from text to checkbox to reflect boolean state
* Remove hint because it's not used for checkbox

--- a/dns/dnscrypt-proxy-ng/src/opnsense/mvc/app/controllers/OPNsense/Dnscryptproxy/forms/settings.xml
+++ b/dns/dnscrypt-proxy-ng/src/opnsense/mvc/app/controllers/OPNsense/Dnscryptproxy/forms/settings.xml
@@ -418,8 +418,7 @@
             <field>
                 <id>settings.lb_estimator</id>
                 <label>Load Balance Estimator</label>
-                <type>text</type>
-                <hint>1</hint>
+                <type>checkbox</type>
                 <help><![CDATA[
                     <b>lb_estimator</b><br>
                     Continuously estimate the latency of all the resolvers and
