dns/dnscrypt-proxy: Remove external for cloaking, add cloak_ttl
* External is not an option for cloaking, so the logic is not relevant.
* Add cloak_ttl, it was completely missing from the jinja.

--- a/dns/dnscrypt-proxy-ng/src/opnsense/service/templates/OPNsense/Dnscryptproxy/dnscrypt-proxy.toml.jinja
+++ b/dns/dnscrypt-proxy-ng/src/opnsense/service/templates/OPNsense/Dnscryptproxy/dnscrypt-proxy.toml.jinja
@@ -238,16 +238,15 @@ forwarding_rules = 'forwarding-rules.txt'
 #      Cloaking Rules                                                          #
 ################################################################################
 
-{%      if cfg['cloaking_type'] == 'external' and
-                cfg['cloaking_file_external'] is defined %}
-cloaking_rules = '{{ cfg['cloaking_file_external'] }}'
-{%      elif cfg['cloaking_type'] == 'manual' and
+{%      if cfg['cloaking_type'] == 'manual' and
                 cfg['cloaking_file_manual'] is defined %}
 cloaking_rules = 'cloaking-manual.txt'
 {%      elif cfg['cloaking_type'] == 'internal' %}
 cloaking_rules = 'cloaking-internal.txt'
 {%      endif %}
-
+{%      if cfg['cloak_ttl'] is defined %}
+cloak_ttl = {{ cfg['cloak_ttl'] }}
+{%      endif %}
 {%  endif %}
 
 ################################################################################
