dns/dnscrypt-proxy: Add missing setting blocked_query_response
* Add blocked_query_response in jinja config template

--- a/dns/dnscrypt-proxy-ng/src/opnsense/service/templates/OPNsense/Dnscryptproxy/dnscrypt-proxy.toml.jinja
+++ b/dns/dnscrypt-proxy-ng/src/opnsense/service/templates/OPNsense/Dnscryptproxy/dnscrypt-proxy.toml.jinja
@@ -132,6 +132,10 @@ keepalive = {{ cfg['keepalive'] }}
 edns_client_subnet = [{{ "'" + ("','".join(cfg['edns_client_subnet'].split(','))) + "'" }}]
 {%  endif -%}
 
+{%  if cfg['blocked_query_response'] is defined %}
+blocked_query_response = '{{ cfg['blocked_query_response'] }}'
+{%  endif -%}
+
 {%  if cfg['lb_strategy'] is defined %}
 lb_strategy = '{{ cfg['lb_strategy'] }}'
 {%  endif -%}
